--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "cypress open"
+    "test": "cypress run --browser electron"
   },
   "dependencies": {
     "@emotion/react": "^11.8.2",
@@ -24,6 +24,7 @@
     "@typescript-eslint/parser": "5.17.0",
     "@vitejs/plugin-react": "^1.3.0",
     "cypress": "^9.5.3",
+    "electron": "^34.1.1",
     "eslint": "8.12.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
